클라우디너리 계정 변경

--- a/eShuffleText.html
+++ b/eShuffleText.html
@@ -94,8 +94,8 @@
 
       // const formData = new FormData();
       // formData.append('file', restoreFile);
-      // formData.append('upload_preset', 'crypto-uploads');
-      // const datas = await fetch('https://api.cloudinary.com/v1_1/dgmgeotyk/image/upload', {
+      // formData.append('upload_preset', 'crypto-uploaded');
+      // const datas = await fetch('https://api.cloudinary.com/v1_1/dv7hpu5oq/image/upload', {
       //   method: 'POST',
       //   body: formData
       // }).then(r => r.json());
