--- a/shuffleImage.html
+++ b/shuffleImage.html
@@ -134,8 +134,8 @@
     console.log(restoreFile);
     const formData = new FormData();
     formData.append('file', restoreFile);
-    formData.append('upload_preset', 'crypto-uploads');
-    const datas = await fetch('https://api.cloudinary.com/v1_1/dgmgeotyk/image/upload', {
+    formData.append('upload_preset', 'crypto-uploaded');
+    const datas = await fetch('https://api.cloudinary.com/v1_1/dv7hpu5oq/image/upload', {
       method: 'POST',
       body: formData
     }).then(r => r.json());
@@ -162,8 +162,8 @@
     console.log(restoreFile);
     const formData = new FormData();
     formData.append('file', restoreFile);
-    formData.append('upload_preset', 'crypto-uploads');
-    const datas = await fetch('https://api.cloudinary.com/v1_1/dgmgeotyk/image/upload', {
+    formData.append('upload_preset', 'crypto-uploaded');
+    const datas = await fetch('https://api.cloudinary.com/v1_1/dv7hpu5oq/image/upload', {
       method: 'POST',
       body: formData
     }).then(r => r.json());
