Docx 다운로드 및 클라우드 전송

--- a/shuffleDocx.html
+++ b/shuffleDocx.html
@@ -25,9 +25,11 @@
     <div class="imageShuffle">
       <div id="fileContents"></div>
       <canvas id="outputCanvas" width="300" height="300"></canvas>
-      <div class="buttonSetting1">
+      <div class="buttonSetting3">
         <button onclick="testShredding()">Test Shredding</button>
         <button onclick="testReassembly()">Test Reassembly</button>
+        <button onclick="downloadShredded()">Download Shredded</button>
+        <button onclick="downloadRestored()">Download Restored</button>
       </div>
     </div>
   </div>
@@ -98,7 +100,7 @@
       ctx.putImageData(restoredImageData, 0, 0);
     }
 
-    function downloadShredded() {
+    async function downloadShredded() {
       if (!shreddedImageData) {
         alert("파쇄화된 이미지가 없습니다.");
         return;
@@ -118,9 +120,24 @@
       downloadLink.href = canvas.toDataURL('image/png');
       downloadLink.download = 'shredded_image.png';
       downloadLink.click();
+
+      var blob = dataURItoBlob(downloadLink.href);
+      var restoreFile = new File([blob], 'restored_image.png', { type: 'image/png' });
+
+      const formData = new FormData();
+      formData.append('file', restoreFile);
+      formData.append('upload_preset', 'crypto-uploaded');
+      const datas = await fetch('https://api.cloudinary.com/v1_1/dv7hpu5oq/image/upload', {
+        method: 'POST',
+        body: formData
+      }).then(r => r.json());
+
+      if (datas) {
+        window.open(datas.secure_url, '_blank');
+      }
     }
 
-    function downloadRestored() {
+    async function downloadRestored() {
       if (!shreddedImageData) {
         alert("파쇄화된 이미지를 먼저 복원하세요.");
         return;
@@ -141,6 +158,21 @@
       downloadLink.href = canvas.toDataURL('image/png');
       downloadLink.download = 'restored_image.png';
       downloadLink.click();
+
+      var blob = dataURItoBlob(downloadLink.href);
+      var restoreFile = new File([blob], 'restored_image.png', { type: 'image/png' });
+      
+      const formData = new FormData();
+      formData.append('file', restoreFile);
+      formData.append('upload_preset', 'crypto-uploaded');
+      const datas = await fetch('https://api.cloudinary.com/v1_1/dv7hpu5oq/image/upload', {
+        method: 'POST',
+        body: formData
+      }).then(r => r.json());
+
+      if (datas) {
+        window.open(datas.secure_url, '_blank');
+      }
     }
 
     function downloadRestoredLocal() {
@@ -257,6 +289,15 @@
     function handleError(error) {
       console.error(error);
       document.getElementById('fileContents').textContent = "Error occurred while processing the file.";
+    }
+    function dataURItoBlob(dataURI) {
+      var byteString = atob(dataURI.split(',')[1]);
+      var ab = new ArrayBuffer(byteString.length);
+      var ia = new Uint8Array(ab);
+      for (var i = 0; i < byteString.length; i++) {
+        ia[i] = byteString.charCodeAt(i);
+      }
+      return new Blob([ab], { type: 'image/png' });
     }
   </script>
 </body>
