--- a/index.html
+++ b/index.html
@@ -31,12 +31,12 @@
                 <p>Docx Shuffle</p>
             </div>
         </a>
-        <!--a href="">
+        <a href="http://3.36.127.208:3300/test.html">
             <div class="item4">
                 <img src="play-button.png" width="40px" height="40px" />
                 <p>Video Shuffle</p>
             </div>
-        </a-->
+        </a>
         <a href="email.html">
             <div class="item5">
                 <img src="email.png" width="40px" height="40px" />
